--- a/css/style.css
+++ b/css/style.css
@@ -78,24 +78,36 @@
       color:#c06;
       font-size: 10px;
       position:absolute; top:850px; left:300px;
+      font-family: cursive;
   }
 
   .e{
       color:#808080;
       position: absolute; top:880px; left: 300px;
       font-size: 30px;
+      font-weight:bold;
   }
 
-  .f{
+
+
+  .body-list{
       width:800px;
       padding:10px 0;
-      position:absolute; top:1000px; left:100px;
-      display: flex;
+      position:absolute; top:1000px; left:300px;
+      list-style: none;
+      color:#808080;
+      
+  }
+
+  .body-item{
+      margin-bottom: 20px;
+      
+      
   }
   
 .f2 {
     width:100px;
-    padding: 0px 0px;
+    padding: 0px 10px;
     color: #fff;
     border-radius :30px;
     background: #c06;
@@ -104,18 +116,82 @@
     
 }
 
-.l{
-    color: #c06;
-    font-size:5px;
-    position:absolute; top:1200px; right:300px;
+.box{
+    border-bottom:1px solid #808080;
+    position:absolute; top:970px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.5;
+}
 
+.box2{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1260px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.5;
+}
 
+.box3{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1040px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.3;
+}
+
+.box4{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1090px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.3;
+}
+   
+.box5{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1135px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.3;
+}
+
+.box6{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1180px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.3;
+}
+
+.box7{
+    border-bottom:1px solid #808080;
+    position:absolute; top:1230px; left:300px;
+    width:800px; 
+    height:1px;
+    opacity: 0.3;
 }
 
 .n{
     color:#808080;
-    font-size: 20px;
-    position:absolute; top:1300px; right:300px;
+    font-size :15px;
+    position:absolute; top:1570px; left:300px;
+}
+
+.l{
+    color: #c06;
+    font-size:10px;
+    position:absolute; top:1450px; left:750px;
+
+
+}
+
+.m{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top:1470px; left:600px;
+    font-weight:bold;
+    
 }
 
 .about{
@@ -123,13 +199,17 @@
     background-size: contain;
     height: 400px;
     width: 400px;
-    position: absolute; top:1500px; right:300px;
+    position: absolute; top:1430px; right:300px;
 }
 
-.m{
-    color:#808080;
-    font-size :10px;
-    position:absolute; top:1500px; left:300px;
+
+
+.main{
+    background-color:rgba(245, 245, 245, 0.9);
+    height: 500px;
+    width:1500px;
+    position:absolute; top:1400px; left:0px;
+    background-size: cover;
 }
 
 .blog_first{
