--- a/css/style.css
+++ b/css/style.css
@@ -187,9 +187,10 @@
 }
 
 .m{
+   
     color:#808080;
     font-size: 30px;
-    position:absolute; top:1470px; left:600px;
+    position:absolute; top:1480px; left:600px;
     font-weight:bold;
     
 }
@@ -212,12 +213,133 @@
     background-size: cover;
 }
 
-.blog_first{
-    background: url(../img/blog__first.jpg) no-repeat bottom;
-    background-size: contain;
+.o{
+    color: #c06;
+    font-size:10px;
+    position:absolute; top:2000px; left:250px;
+}
+
+.p{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top:2030px; left:250px;
+    font-weight:bold;
+}
+
+.main2{
+    background-color:rgba(245, 245, 245, 0.9);
+    height: 500px;
+    width:1500px;
+    position:absolute; top:2900px; left:0px;
+    background-size: cover;
+}
+
+.q{
+    color: #c06;
+    font-size:10px;
+    position:absolute; top:3000px; left:300px;
+}
+
+.r{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top: 3030px; left:300px;
+    font-weight:bold;
+}
+
+.main3{
+    background-color:rgba(214, 34, 88, 0.247);
+    height: 400px;
+    width:500px;
+    position:absolute; top:2100px; left:250px;
+    background-size: cover;
+}
+
+.main4{
+    background-color:rgba(212, 71, 165, 0.9);
     height: 200px;
-    width: 200px;
-    position: absolute; top: 3000px;
+    width:500px;
+    position:absolute; top:2100px; right:270px;
+    background-size: cover;
+}
+
+.main5{
+    background-color:rgba(192, 125, 172, 0.9);
+    height: 200px;
+    width:500px;
+    position:absolute; top:2300px; right:270px;
+    background-size: cover;
+}
+
+
+.service_first{
+    background:url(../img/service__first.svg) no-repeat bottom;
+    background-size: contain;
+    height: 170px;
+    width:240px;
+    position: absolute; top:2110px;left:370px;
+}
+
+.service_first2{
+    background:url(../img/service__first.svg) no-repeat bottom;
+    background-size: contain;
+    height: 170px;
+    width:240px;    position: absolute; top:2110px;left:740px;
+}
+
+.service_first3{
+    background:url(../img/service__first.svg) no-repeat bottom;
+    background-size: contain;
+    height: 170px;
+    width:240px;
+    position: absolute; top:2310px;left:740px;
+}
+
+.w{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+} 
+
+ .x{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+} 
+  
+  .y{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+} 
+  
+  .z{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+}  
+
+  .aa{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+} 
+
+  .ab{
+    color:#ffffff;
+    font-size :15px;
+    position:absolute; top:2300px; left:455px;
+} 
+  
+
+.s{
+    width:100px;
+    padding: 0px 10px;
+    color: #fff;
+    border-radius :30px;
+    background: #c06;
+    text-align: center;  
+    position:absolute; top:3100px; left:300px;
 }
 
 .recruit{
@@ -225,7 +347,7 @@
     background-size: contain;
     height: 200px;
     width:300px;
-    position: absolute; top:3500px;
+    position: absolute; top:4500px;
 }
 
 .interview{
@@ -233,13 +355,7 @@
     background-size: contain;
     height: 200px;
     width: 300px;
-    position: absolute; top:4000px;
+    position: absolute; top:5000px;
 }
 
 
-  
-  
-  
-  
-  
-  
