--- a/css/style.css
+++ b/css/style.css
@@ -236,14 +236,16 @@
 
 .q{
     color: #c06;
+    height:10px;
+    width:10px;
     font-size:10px;
-    position:absolute; top:3000px; left:300px;
+    position:absolute; top:2650px; left:250px;
 }
 
 .r{
     color:#808080;
     font-size: 30px;
-    position:absolute; top: 3030px; left:300px;
+    position:absolute; top: 2680px; left:250px;
     font-weight:bold;
 }
 
@@ -349,6 +351,7 @@
     text-align: center;  
     position:absolute; top:2800px;
      left:300px;
+     list-style: none;
 }
 
 .image{
@@ -357,15 +360,12 @@
    width:100px;
    height:100px;
    background-size:cover;
-   position: absolute; top:3000px; left:300px;
+   position: absolute; top:2750px; left:250px;
    width:40%;
    
    
 }
 
-.img-flex2 img{
-    width:1000px;
-}
 
 .recruit{
     background:url(../img/recruit.png) no-repeat bottom;
