--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@
 .r{
     color:#808080;
     font-size: 30px;
-    position:absolute; top: 2680px; left:250px;
+    position:absolute; top: 2670px; left:250px;
     font-weight:bold;
 }
 
@@ -352,16 +352,19 @@
     position:absolute; top:2800px;
      left:300px;
      list-style: none;
+     display: flex;
+     justify-content: space-between;
+     width:65%;
 }
 
 .image{
    display: flex;
    justify-content:space-between;
-   width:100px;
-   height:100px;
+   width:190px;
+   height:150px;
    background-size:cover;
-   position: absolute; top:2750px; left:250px;
-   width:40%;
+   position: absolute; top:2740px; left:250px;
+   width:65%;
    
    
 }
