--- a/css/style.css
+++ b/css/style.css
@@ -234,20 +234,7 @@
     background-size: cover;
 }
 
-.q{
-    color: #c06;
-    height:10px;
-    width:10px;
-    font-size:10px;
-    position:absolute; top:2650px; left:250px;
-}
 
-.r{
-    color:#808080;
-    font-size: 30px;
-    position:absolute; top: 2670px; left:250px;
-    font-weight:bold;
-}
 
 .main3{
     background-color:rgba(168, 11, 90, 0.9);
@@ -342,33 +329,58 @@
     background-size: cover;
 }
 
-.s{
-    width:100px;
-    padding: 0px 10px;
-    color: #fff;
-    border-radius :30px;
+.q{
+    color: #c06;
+    height:10px;
+    width:10px;
+    font-size:10px;
+    position:absolute; top:2640px; left:250px;
+}
+
+.r{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top: 2660px; left:250px;
+    font-weight:bold;
+}
+
+.card{ 
+    background:url(../img/blog__first.jpg) no-repeat bottom;
+    background-size: cover;
+    width:240px;
+    height:170px; 
+    position: absolute; top:2730px; left:250px; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    
+}
+
+.card p{
+    position:absolute;top:0px; left:0px;
+    color:#fff;
+    padding: 2px 10px;
+    border-radius :0px;
     background: #c06;
-    text-align: center;  
-    position:absolute; top:2800px;
-     left:300px;
-     list-style: none;
-     display: flex;
-     justify-content: space-between;
-     width:65%;
+    font-size:1em;
+    border-top-left-radius: 15px;
+    
 }
 
-.image{
-   display: flex;
-   justify-content:space-between;
-   width:190px;
-   height:150px;
-   background-size:cover;
-   position: absolute; top:2740px; left:250px;
-   width:65%;
-   
-   
+.text{
+    background-color:rgba(240, 231, 234, 0.5);
+    background-size:cover; 
+    position:absolute; top:120px;  left:0px;
+     width:240px;
+     height:150px;
+     border-bottom-left-radius: 20px;
+     border-bottom-right-radius: 20px;
 }
-
+.txt_detail{
+   font-size:0.1em;
+   position:absolute; top:30px; 
+    
+     
+}
 
 .recruit{
     background:url(../img/recruit.png) no-repeat bottom;
