--- a/css/style.css
+++ b/css/style.css
@@ -352,6 +352,7 @@
     position: absolute; top:2730px; left:250px; 
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
+
     
 }
 
@@ -369,17 +370,58 @@
 .text{
     background-color:rgba(240, 231, 234, 0.5);
     background-size:cover; 
-    position:absolute; top:120px;  left:0px;
+    position:absolute; top:200px;  left:0px;
      width:240px;
      height:150px;
      border-bottom-left-radius: 20px;
      border-bottom-right-radius: 20px;
+     font-size: 0.8em;
 }
-.txt_detail{
-   font-size:0.1em;
-   position:absolute; top:30px; 
-    
-     
+
+
+
+
+.aj{
+    width:100px;
+    padding: 0px 10px;
+    color: #fff;
+    border-radius :30px;
+    background: #c06;
+    text-align: center;  
+    position:absolute;top:3030px; left:700px;
+}
+
+.ac{
+    color: #c06;
+    height:10px;
+    width:10px;
+    font-size:10px;
+    position:absolute; top:3200px; left:250px;
+}
+
+.ad{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top: 3230px; left:250px;
+    font-weight:bold;
+}
+
+.ae{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top: 3350px; left:250px;
+    font-weight:bold;
+    list-style:none;
+    line-height:80px;
+}
+
+.af{
+    color:#808080;
+    font-size: 30px;
+    position:absolute; top: 3350px; left:600px;
+    font-weight:bold;
+    list-style:none;
+    line-height:80px;
 }
 
 .recruit{
