--- a/css/style.css
+++ b/css/style.css
@@ -363,7 +363,7 @@
 .text{
     background-color:rgba(240, 231, 234, 0.5);
     background-size:cover; 
-    position:absolute; top:200px;  left:0px;
+    position:absolute; top:100px;  left:0px;
      width:240px;
      height:150px;
      border-bottom-left-radius: 20px;
@@ -407,26 +407,36 @@
 
 
 
-.af{
-    color:#808080;
-    font-size: 30px;
-    position:absolute; top: 3350px; left:600px;
-    font-weight:bold;
-    list-style:none;
-    line-height:80px;
-    font-size:25px;
-}
+
 
 table{
     border-collapse: collapse;
     color:#808080;
-    position:absolute; top: 3320px; left:250px;
+    position:absolute; top: 3310px; left:250px;
     font-weight:bold;
-    line-height:80px;
+    line-height:40px;
     font-size:20px;
+    
 } 
 
+th{
+    background-color: #f2f5f7;
+    border:solid 1px;
+    padding:  0px 10px;
+    width: 300px;
+    height:0px;
+    text-align: left;
+}
 
+td{
+    border:solid 1px;
+    padding:10px;
+    width:600px;
+    height:10px;
+    text-align: left;
+    font-size:18px;
+
+}
 
 .recruit{
     background:url(../img/recruit.png) no-repeat bottom;
