--- a/css/style.css
+++ b/css/style.css
@@ -341,15 +341,33 @@
     background:url(../img/blog__first.jpg) no-repeat bottom;
     background-size: cover;
     width:240px;
-    height:170px; 
-    position: absolute; top:2730px; left:250px; 
+    height:150px; 
+    position: absolute; top:2730px; left:280px; 
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
-
-    
 }
 
-.card p{
+.card1{ 
+    background:url(../img/blog__first.jpg) no-repeat bottom;
+    background-size: cover;
+    width:240px;
+    height:150px; 
+    position: absolute; top:2730px; left:650px; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.card2{ 
+    background:url(../img/blog__first.jpg) no-repeat bottom;
+    background-size: cover;
+    width:240px;
+    height:150px; 
+    position: absolute; top:2730px; left:1020px; 
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+}
+
+.ah{
     position:absolute;top:0px; left:0px;
     color:#fff;
     padding: 2px 10px;
@@ -357,21 +375,39 @@
     background: #c06;
     font-size:1em;
     border-top-left-radius: 15px;
-    
 }
 
 .text{
-    background-color:rgba(240, 231, 234, 0.5);
+    background-color:rgb(255, 255, 255);
     background-size:cover; 
-    position:absolute; top:100px;  left:0px;
+    position:absolute; top:150px;  left:0px;
      width:240px;
-     height:150px;
+     height:120px;
      border-bottom-left-radius: 20px;
      border-bottom-right-radius: 20px;
+     font-size:14px;
 }
 
 .txt_detail{
-    font-size:0.8em;
+    position:absolute; top:20px;  left:15px;
+     width:240px;
+     height:150px;
+}
+
+.ai{
+    font-size:0.5em; 
+    position:absolute; top:88px;  left:20px;
+     width:240px;
+     height:150px;
+     opacity: 0.5;
+}
+
+.ak{
+    font-size:0.5em; 
+    position:absolute; top:88px;  left:140px;
+     width:240px;
+     height:150px;
+     opacity: 0.5;
 }
 
 
@@ -404,6 +440,8 @@
     position:absolute; top: 3230px; left:250px;
     font-weight:bold;
 }
+
+
 
 
 
