--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@
     color: #c06;
     font-size:10px;
     position:absolute; top:1450px; left:750px;
+    font-family: cursive;
 
 
 }
@@ -217,6 +218,7 @@
     color: #c06;
     font-size:10px;
     position:absolute; top:2000px; left:250px;
+    font-family: cursive;
 }
 
 .p{
@@ -328,6 +330,7 @@
     width:10px;
     font-size:10px;
     position:absolute; top:2640px; left:250px;
+    font-family: cursive;
 }
 
 .r{
@@ -432,6 +435,7 @@
     width:10px;
     font-size:10px;
     position:absolute; top:3200px; left:250px;
+    font-family: cursive;
 }
 
 .ad{
@@ -502,18 +506,83 @@ td{
     background-size: cover;
     position: absolute; top:3750px; left:0px;
     display:flex;
-    width:1000px;
-    height:200px;
+    width:100%;
+    height:100%;
 }
 
 .img2-item{
-    width:1000px;
-    height:200px;
+    background-size: cover;
     position: absolute; top:0px; left:0px;
+    display:flex;
+    width:50%;
+    height:50%;
 }
 
 .img2-item2{
-    width:300px;
-    height:200px;
-    position: absolute; top:0px; left:600px;
+    background-size: cover;
+    position: absolute; top:0px; left:760px;
+    display:flex;
+    width:50%;
+    height:50%;
 }
+
+.estra{
+    font-size:25px;
+    position:absolute; top:4170px; left:510px;
+    color:#808080
+}
+
+.bar{
+    margin-left:100px;
+    width:3px;
+    height:40px;
+    background-color: #c06;
+    position:absolute; top:4230px; left:660px;
+}
+
+.mail{
+        width: 200px;
+        padding: 20px 30px;
+        color: #fff;
+        border-radius: 30px;
+        background: linear-gradient(90deg, #dd1b66, #88083d);
+        text-align: center;
+        box-shadow: 0px 10px 5px rgba(12, 0, 9, 0.2);
+        margin:100px auto 0;
+        display:block;
+        position:absolute;top:4190px; left:630px;
+      }
+
+small{
+    font-size:15px;
+    position:absolute; top:4410px; left:610px;
+    text-align:center;
+    color:#808080;
+    display:block;
+    vertical-align: bottom;
+}
+
+.background1{
+    background-color:rgba(245, 245, 245, 0.9);
+    height: 40px;
+    width:1520px;
+    position:absolute; top:4400px; left:0px;
+    background-size: cover;
+    display:block;
+    vertical-align: bottom;
+}
+
+.al{
+    color:#ffffff;
+    font-size :40px;
+    position:absolute; top:3930px; left:300px;
+}
+
+.an{
+    color:#ffffff;
+    font-size :40px;
+    position:absolute; top:3930px; left:1000px;
+}
+
+
+
