--- a/css/style.css
+++ b/css/style.css
@@ -28,14 +28,15 @@
     background: url(../img/firstview.jpg) no-repeat bottom;
     background-size: contain;
     position: absolute; top:70px; right:0px;
-    height: 700px;
-    width: 1000px;
+    height:40%;
+    width: 100%;
+    
     
     
 }
 
   .a{
-    position: absolute; top:200px; left:280px;
+    position: absolute; top:200px; left:15%;
     font-size: 55px; color: #f3f;
     font-family: cursive;
   }
@@ -45,7 +46,7 @@
   }
 
   .b{
-    position: absolute; top:400px; left:280px;
+    position: absolute; top:400px; left:15%;
     font-size: 20px; color: #f3f;
     font-family: cursive;
   }
@@ -55,7 +56,7 @@
   }
 
   .c{
-    position: absolute; top:430px; left:280px;
+    position: absolute; top:430px; left:15%;
     font-size: 15px; color: #808080;
     font-family: cursive;
   }
@@ -77,13 +78,13 @@
   .d{
       color:#c06;
       font-size: 10px;
-      position:absolute; top:850px; left:300px;
+      position:absolute; top:850px; left:20%;
       font-family: cursive;
   }
 
   .e{
       color:#808080;
-      position: absolute; top:880px; left: 300px;
+      position: absolute; top:880px; left: 20%;
       font-size: 30px;
       font-weight:bold;
   }
@@ -93,7 +94,7 @@
   .body-list{
       width:800px;
       padding:10px 0;
-      position:absolute; top:1000px; left:300px;
+      position:absolute; top:1000px; left:20%;
       list-style: none;
       color:#808080;
       
@@ -118,7 +119,7 @@
 
 .box{
     border-bottom:1px solid #808080;
-    position:absolute; top:970px; left:300px;
+    position:absolute; top:970px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.5;
@@ -126,7 +127,7 @@
 
 .box2{
     border-bottom:1px solid #808080;
-    position:absolute; top:1260px; left:300px;
+    position:absolute; top:1260px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.5;
@@ -134,7 +135,7 @@
 
 .box3{
     border-bottom:1px solid #808080;
-    position:absolute; top:1040px; left:300px;
+    position:absolute; top:1040px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.3;
@@ -142,7 +143,7 @@
 
 .box4{
     border-bottom:1px solid #808080;
-    position:absolute; top:1090px; left:300px;
+    position:absolute; top:1090px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.3;
@@ -150,7 +151,7 @@
    
 .box5{
     border-bottom:1px solid #808080;
-    position:absolute; top:1135px; left:300px;
+    position:absolute; top:1135px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.3;
@@ -158,7 +159,7 @@
 
 .box6{
     border-bottom:1px solid #808080;
-    position:absolute; top:1180px; left:300px;
+    position:absolute; top:1180px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.3;
@@ -166,7 +167,7 @@
 
 .box7{
     border-bottom:1px solid #808080;
-    position:absolute; top:1230px; left:300px;
+    position:absolute; top:1230px; left:20%;
     width:800px; 
     height:1px;
     opacity: 0.3;
@@ -175,13 +176,13 @@
 .n{
     color:#808080;
     font-size :15px;
-    position:absolute; top:1570px; left:300px;
+    position:absolute; top:1570px; left:20%;
 }
 
 .l{
     color: #c06;
     font-size:10px;
-    position:absolute; top:1450px; left:750px;
+    position:absolute; top:1450px; left:50%;
     font-family: cursive;
 
 
@@ -191,7 +192,7 @@
    
     color:#808080;
     font-size: 30px;
-    position:absolute; top:1480px; left:600px;
+    position:absolute; top:1480px; left:38%;
     font-weight:bold;
     
 }
@@ -199,9 +200,9 @@
 .about{
     background: url(../img/about.jpg) no-repeat bottom;
     background-size: contain;
-    height: 400px;
-    width: 400px;
-    position: absolute; top:1430px; right:300px;
+    height: 28%;
+    width: 28%;
+    position: absolute; top:110%; right:13%;
 }
 
 
@@ -210,21 +211,22 @@
     background-color:rgba(245, 245, 245, 0.9);
     height: 500px;
     width:100%;
-    position:absolute; top:1400px; left:0px;
+    position:absolute; top:1400px; 
+    text-align:center;
     background-size: cover;
 }
 
 .o{
     color: #c06;
     font-size:10px;
-    position:absolute; top:2000px; left:250px;
+    position:absolute; top:2000px; left:20%;
     font-family: cursive;
 }
 
 .p{
     color:#808080;
     font-size: 30px;
-    position:absolute; top:2030px; left:250px;
+    position:absolute; top:2030px; left:20%;
     font-weight:bold;
 }
 
@@ -235,7 +237,7 @@
     background-color:rgba(168, 11, 90, 0.9);
     height: 400px;
     width:500px;
-    position:absolute; top:2100px; left:250px;
+    position:absolute; top:2100px; left:20%;
     background-size: cover;
     display:flex;
 }
@@ -244,7 +246,7 @@
     background-color:rgba(199, 71, 135, 0.9);
     height: 200px;
     width:500px;
-    position:absolute; top:2100px; right:270px;
+    position:absolute; top:2100px; left:54%;
     background-size: cover;
     display:flex;
 }
@@ -253,7 +255,7 @@
     background-color:rgba(192, 125, 172, 0.9);
     height: 200px;
     width:500px;
-    position:absolute; top:2300px; right:270px;
+    position:absolute; top:2300px; left:65%;
     background-size: cover;
     display:flex;
 }
@@ -264,7 +266,7 @@
     background-size: contain;
     height: 160px;
     width:230px;
-    position: absolute; top:2130px;left:370px;
+    position: absolute; top:2130px;left:20%;
 }
 
 .service_first2{
@@ -272,7 +274,7 @@
     background-size: contain;
     height: 160px;
     width:230px;   
-     position: absolute; top:2110px;left:740px;
+     position: absolute; top:2110px;left:40%;
 }
 
 .service_first3{
@@ -280,25 +282,25 @@
     background-size: contain;
     height: 160px;
     width:230px;
-    position: absolute; top:2310px;left:740px;
+    position: absolute; top:2310px;left:60%;
 }
 
 .w{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2310px; left:455px;
+    position:absolute; top:2310px; left:20%;
 } 
 
  .x{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2350px; left:335px;
+    position:absolute; top:2350px; left:40%;
 } 
   
   .y{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2150px; left:950px;
+    position:absolute; top:2150px; left:60%;
 } 
   
   .z{
@@ -332,15 +334,19 @@
     height:10px;
     width:10px;
     font-size:10px;
-    position:absolute; top:2640px; left:250px;
+    position:absolute; top:2640px; left:20%;
     font-family: cursive;
 }
 
 .r{
     color:#808080;
     font-size: 30px;
-    position:absolute; top: 2660px; left:250px;
+    position:absolute; top: 2660px; left:20%;
     font-weight:bold;
+}
+
+.car{
+    display:flex;
 }
 
 .card{ 
@@ -348,7 +354,7 @@
     background-size: cover;
     width:240px;
     height:150px; 
-    position: absolute; top:2730px; left:280px; 
+    position: absolute; top:2730px; left:20%; 
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -358,7 +364,7 @@
     background-size: cover;
     width:240px;
     height:150px; 
-    position: absolute; top:2730px; left:650px; 
+    position: absolute; top:2730px; left:40%; 
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -368,7 +374,7 @@
     background-size: cover;
     width:240px;
     height:150px; 
-    position: absolute; top:2730px; left:1020px; 
+    position: absolute; top:2730px; left:60%; 
     border-top-left-radius: 20px;
     border-top-right-radius: 20px;
 }
@@ -424,7 +430,7 @@
     border-radius :30px;
     background: #fff;
     text-align: center;  
-    position:absolute;top:3030px; left:700px;
+    position:absolute;top:3030px; left:50%;
     border-color:#c06;
     border-width:3px;
     border-style:solid;
@@ -437,14 +443,14 @@
     height:10px;
     width:10px;
     font-size:10px;
-    position:absolute; top:3200px; left:250px;
+    position:absolute; top:3200px; left:20%;
     font-family: cursive;
 }
 
 .ad{
     color:#808080;
     font-size: 30px;
-    position:absolute; top: 3230px; left:250px;
+    position:absolute; top: 3230px; left:20%;
     font-weight:bold;
 }
 
@@ -457,10 +463,11 @@
 table{
     border-collapse: collapse;
     color:#808080;
-    position:absolute; top: 3310px; left:250px;
+    position:absolute; top: 3310px; left:20%;
     font-weight:bold;
     line-height:40px;
     font-size:20px;
+    width:70%;
     
 } 
 
@@ -468,7 +475,7 @@ th{
     background-color: #f2f5f7;
     border:solid 1px;
     padding:  0px 10px;
-    width: 300px;
+    width:30%;
     height:0px;
     text-align: left;
 }
@@ -476,7 +483,7 @@ th{
 td{
     border:solid 1px;
     padding:10px;
-    width:600px;
+    width:200%;
     height:10px;
     text-align: left;
     font-size:18px;
@@ -487,20 +494,20 @@ td{
     background:url(../img/recruit.png) no-repeat bottom;
     background-size: contain;
     height: 300px;
-    width:950px;
-    position: absolute; top:3770px; left:-100px;
+    width:30%;
+    position: absolute; top:3770px; left:50%;
     vertical-align: baseline;
     padding-left:0;
-    display: inline-block;
+    
 }
 
 .interview{
     background: url(../img/interview.png) no-repeat bottom;
     background-size: contain;
     height: 300px;
-    width:950px;
-    position: absolute; top:3770px; left:650px;
-    display: block;
+    width:30%;
+    position: absolute; top:3770px; left:50%;
+    
 }
 
 
@@ -509,8 +516,8 @@ td{
     background-size: cover;
     position: absolute; top:3750px; left:0px;
     display:flex;
-    width:100%;
-    height:100%;
+    width:90%;
+    height:50%;
 }
 
 .img2-item{
@@ -523,8 +530,10 @@ td{
 .img2-item2{
     background-size: cover;
     display:flex;
-    width:50%;
+    width:40%;
     height:50%;
+    
+
 }
 
 .estra{
@@ -551,12 +560,12 @@ td{
         box-shadow: 0px 10px 3px #993366;
         margin:100px auto 0;
         display:block;
-        position:absolute;top:4190px; left:630px;
+        position:absolute;top:4200px; left:630px;
       }
 
 small{
     font-size:15px;
-    position:absolute; top:4460px; left:610px;
+    position:absolute; top:4490px; left:40%;
     text-align:center;
     color:#808080;
     display:block;
@@ -567,7 +576,7 @@ small{
     background-color:rgba(245, 245, 245, 0.9);
     height: 40px;
     width: 100%;
-    position:absolute; top:4450px; left:0px;
+    position:absolute; top:4480px; left:0px;
     background-size: cover;
     display:block;
     
@@ -644,16 +653,16 @@ small{
 
 .al{
     color:#ffffff;
-    font-size :40px;
-    position:absolute; top:3900px; left:300px;
+    font-size:40px;
+    position:absolute; top:3900px; left:30%;
     margin:0;
     padding:0;
 }
 
 .an{
     color:#ffffff;
-    font-size :40px;
-    position:absolute; top:3900px; left:1000px;
+    font-size :30px;
+    position:absolute; top:3900px; left:40%;
     margin:0;
     padding:0;
 }
