--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
     height: 130px;
     width: 130px;   
     position: relative;
-    top: -65px; left:30px;
+    top: -65px; left:3%;
     
   
 }
@@ -27,7 +27,7 @@
   .firstview{
     background: url(../img/firstview.jpg) no-repeat bottom;
     background-size: contain;
-    position: absolute; top:70px; right:0px;
+    position: absolute; top:70px; right:0;
     height:40%;
     width: 100%;
     
@@ -255,9 +255,7 @@
     background-color:rgba(192, 125, 172, 0.9);
     height: 200px;
     width:500px;
-    position:absolute; top:2300px; left:65%;
-    background-size: cover;
-    display:flex;
+    position:absolute; top:2300px; left:44%;
 }
 
 
@@ -467,7 +465,7 @@ table{
     font-weight:bold;
     line-height:40px;
     font-size:20px;
-    width:70%;
+    width:65%;
     
 } 
 
@@ -516,21 +514,21 @@ td{
     background-size: cover;
     position: absolute; top:3750px; left:0px;
     display:flex;
-    width:90%;
+    width:100%;
     height:50%;
 }
 
 .img2-item{
     background-size: cover;
     display:flex;
-    width:50%;
+    
     height:50%;
 }
 
 .img2-item2{
     background-size: cover;
     display:flex;
-    width:40%;
+    width:20%;
     height:50%;
     
 
@@ -577,8 +575,7 @@ small{
     height: 40px;
     width: 100%;
     position:absolute; top:4480px; left:0px;
-    background-size: cover;
-    display:block;
+
     
 }
 
@@ -654,7 +651,7 @@ small{
 .al{
     color:#ffffff;
     font-size:40px;
-    position:absolute; top:3900px; left:30%;
+    position:absolute; top:3900px; left:23%;
     margin:0;
     padding:0;
 }
@@ -662,7 +659,7 @@ small{
 .an{
     color:#ffffff;
     font-size :30px;
-    position:absolute; top:3900px; left:40%;
+    position:absolute; top:3900px; left:60%;
     margin:0;
     padding:0;
 }
