--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,15 @@
     display: flex;
     justify-content: space-between;
     font-weight: bold;
-    position: absolute; top:30px; right:30px;
+    position: absolute; top:30px; right:3%;
   }
   
   .firstview{
     background: url(../img/firstview.jpg) no-repeat bottom;
-    background-size: contain;
+    background-size: cover;
     position: absolute; top:70px; right:0;
     height:40%;
-    width: 100%;
+    width: 40%;
     
     
     
@@ -512,27 +512,26 @@ td{
 
 .img2{
     background-size: cover;
-    position: absolute; top:3750px; left:0px;
+    position: absolute; top:3750px; left:0;
     display:flex;
-    width:100%;
-    height:50%;
+    max-width:100%;
+    
+    
 }
 
 .img2-item{
-    background-size: cover;
-    display:flex;
-    
-    height:50%;
+   width:50%;
+   height:30%;
+   max-width: 50%;
 }
 
 .img2-item2{
-    background-size: cover;
-    display:flex;
-    width:20%;
-    height:50%;
-    
-
+    width:50%;
+    height:30%;
+    max-width: 50%;
 }
+
+
 
 .estra{
     font-size:25px;
