--- a/css/style.css
+++ b/css/style.css
@@ -514,21 +514,22 @@ td{
     background-size: cover;
     position: absolute; top:3750px; left:0;
     display:flex;
-    max-width:100%;
+    width:100%;
+    
+    
     
     
 }
 
 .img2-item{
+    
    width:50%;
-   height:30%;
-   max-width: 50%;
+   
 }
 
 .img2-item2{
+    
     width:50%;
-    height:30%;
-    max-width: 50%;
 }
 
 
