--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 
 .estra_logo{
@@ -514,6 +515,7 @@ td{
     background-size: cover;
     position:relative; top:3750px; left:0;
     display:flex;
+    flex-direction:row;
     width:100% ;
 }
 
