--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,6 @@
   
 }
 
-
-
 .header-nav-list {
     display: flex;
     justify-content: space-between;
@@ -29,8 +27,8 @@
     background: url(../img/firstview.jpg) no-repeat bottom;
     background-size: cover;
     position: absolute; top:70px; right:0;
-    height:40%;
-    width: 40%;
+    height:50%;
+    width: 70%;
     
     
     
@@ -121,7 +119,7 @@
 .box{
     border-bottom:1px solid #808080;
     position:absolute; top:970px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.5;
 }
@@ -129,7 +127,7 @@
 .box2{
     border-bottom:1px solid #808080;
     position:absolute; top:1260px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.5;
 }
@@ -137,7 +135,7 @@
 .box3{
     border-bottom:1px solid #808080;
     position:absolute; top:1040px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.3;
 }
@@ -145,7 +143,7 @@
 .box4{
     border-bottom:1px solid #808080;
     position:absolute; top:1090px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.3;
 }
@@ -153,7 +151,7 @@
 .box5{
     border-bottom:1px solid #808080;
     position:absolute; top:1135px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.3;
 }
@@ -161,7 +159,7 @@
 .box6{
     border-bottom:1px solid #808080;
     position:absolute; top:1180px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.3;
 }
@@ -169,7 +167,7 @@
 .box7{
     border-bottom:1px solid #808080;
     position:absolute; top:1230px; left:20%;
-    width:800px; 
+    width:700px; 
     height:1px;
     opacity: 0.3;
 }
@@ -247,7 +245,7 @@
     background-color:rgba(199, 71, 135, 0.9);
     height: 200px;
     width:500px;
-    position:absolute; top:2100px; left:54%;
+    position:absolute; top:2100px; left:44%;
     background-size: cover;
     display:flex;
 }
@@ -571,10 +569,11 @@ img{
 
 .small1{
     font-size:15px;
-    position:absolute; top:4490px; left:40%;
+    
     text-align:center;
     color:#808080;
     display:block;
+    
     
 }
 
@@ -658,8 +657,8 @@ img{
 
 .al{
     color:#ffffff;
-    font-size:40px;
-    position:absolute; top:3900px; left:23%;
+    font-size:;
+    position:absolute; top:3900px; left:20%;
     margin:0;
     padding:0;
 }
@@ -667,7 +666,7 @@ img{
 .an{
     color:#ffffff;
     font-size :30px;
-    position:absolute; top:3900px; left:60%;
+    position:absolute; top:3900px; left:65%;
     margin:0;
     padding:0;
 }
