--- a/css/style.css
+++ b/css/style.css
@@ -225,104 +225,86 @@
 .o{
     color: #c06;
     font-size:10px;
-    position:absolute; top:2000px; left:20%;
+    position:absolute; top:1980px; left:20%;
     font-family: cursive;
 }
 
 .p{
     color:#808080;
     font-size: 30px;
-    position:absolute; top:2030px; left:20%;
+    position:absolute; top:2010px; left:20%;
     font-weight:bold;
 }
 
 
 
 
-.main3{
-    background-color:rgba(168, 11, 90, 0.9);
-    height: 400px;
-    width:500px;
-    position:absolute; top:2100px; left:20%;
-    background-size: cover;
-    display:flex;
-}
 
-.main4{
-    background-color:rgba(199, 71, 135, 0.9);
-    height: 200px;
-    width:500px;
-    position:absolute; top:2100px; left:44%;
-    background-size: cover;
-    display:flex;
-}
-
-.main5{
-    background-color:rgba(192, 125, 172, 0.9);
-    height: 200px;
-    width:500px;
-    position:absolute; top:2300px; left:44%;
-}
 
 
 .service_first{
     background:url(../img/service__first.svg) no-repeat bottom;
     background-size: contain;
     height: 160px;
-    width:230px;
-    position: absolute; top:2130px;left:20%;
+    margin: 30px;
+    
+    
 }
 
 .service_first2{
     background:url(../img/service__first.svg) no-repeat bottom;
     background-size: contain;
     height: 160px;
-    width:230px;   
-     position: absolute; top:2110px;left:40%;
+
+    
 }
 
 .service_first3{
     background:url(../img/service__first.svg) no-repeat bottom;
     background-size: contain;
     height: 160px;
-    width:230px;
-    position: absolute; top:2310px;left:60%;
+    
+    
 }
 
 .w{
     color:#ffffff;
-    font-size :15px;
-    position:absolute; top:2310px; left:20%;
+    font-size :18px;
+    text-align: center;
+    margin: 15px;
+    
 } 
 
  .x{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2350px; left:40%;
+    text-align: left;
+    margin: 0 50px;
 } 
   
   .y{
     color:#ffffff;
-    font-size :15px;
-    position:absolute; top:2150px; left:60%;
+    font-size :18px;
+    text-align: center;
 } 
   
   .z{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2190px; left:950px;
+    text-align: left;
+    margin: 0 40px;
 }  
 
   .aa{
     color:#ffffff;
-    font-size :15px;
-    position:absolute; top:2350px; left:950px;
+    font-size :18px;
+    text-align: center;
 } 
 
   .ab{
     color:#ffffff;
     font-size :15px;
-    position:absolute; top:2390px; left:950px;
+    text-align: center;
 } 
   
 .main6{
@@ -708,28 +690,35 @@ img{
 
 .grid{
     display: grid;
-    grid-template-rows: 300px 300px;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    
+    grid-template-rows: 200px 200px;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    position: relative;
+    top: 1380px;
 }
 
 
-.box1{
-    grid-column:2/3;
-    grid-row:1/2;
-    background:#88083d;
-    position:relative;top:400px;
+.box-1{
+    grid-column: 2/4;
+    grid-row: 1/3;
+    background: rgba(168, 11, 90, 0.9);;
+    position: relative;
+    top: 400px;
 }
-.box2{
-    grid-column:3/4;
+.box-2{
+    grid-column: 4/6;
     grid-row: 1/2;
-    background:#5f4d56;
-    position:relative;top:400px;
+    background: rgba(199, 71, 135, 0.9);;
+    position: relative;
+    top: 400px;
 }
 
-.box3{
-    grid-column:3/4;
-    grid-row:2/3;
-    background:#203155;
-    position:relative;top:400px;
+.box-3{
+    grid-column: 4/6;
+    grid-row: 2/3;
+    background: rgba(192, 125, 172, 0.9);;
+    position: relative;
+    top: 400px;
 }
+
+
+  
