--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,7 @@
     width:700px; 
     height:1px;
     opacity: 0.5;
+
 }
 
 .box3{
@@ -238,7 +239,15 @@
 
 
 
+.img-service{
+    width:30%;
+    margin: 0 0 0 20px;
+}
 
+.img-service2{
+    width:30%;
+    margin: 0 0 0 20px;
+}
 
 
 
@@ -285,26 +294,28 @@
   .y{
     color:#ffffff;
     font-size :18px;
-    text-align: center;
+    text-align: left;
+    margin: 30px 0 5px 20px;
 } 
   
   .z{
     color:#ffffff;
     font-size :15px;
     text-align: left;
-    margin: 0 40px;
+    margin: 10px 10px 10px 20px;
 }  
 
   .aa{
     color:#ffffff;
     font-size :18px;
-    text-align: center;
+    text-align: left;
+    margin: 30px 0 5px 20px;
 } 
 
   .ab{
     color:#ffffff;
     font-size :15px;
-    text-align: center;
+    margin: 10px 10px 10px 20px;
 } 
   
 .main6{
@@ -530,7 +541,7 @@ img{
 }
 
 .mail{
-        width: 200px;
+        width: 250px;
         padding: 20px 30px;
         color: #fff;
         border-radius: 30px;
@@ -710,6 +721,7 @@ img{
     background: rgba(199, 71, 135, 0.9);;
     position: relative;
     top: 400px;
+    display: flex;
 }
 
 .box-3{
@@ -718,6 +730,7 @@ img{
     background: rgba(192, 125, 172, 0.9);;
     position: relative;
     top: 400px;
+    display: flex;
 }
 
 
