--- a/css/style.css
+++ b/css/style.css
@@ -208,8 +208,8 @@
     height: 20vw;
     width: 28vw;
     position: absolute;
-    top: 107%;
-    right: 13%;
+    top: 1550px;
+    left: 59%;
 }
 
 
